# HeatMap

./: CMakeLists.txt  README.md  conanfile.py
.github/workflows/: build.yml
res/heatmap/: heatmap.js
src/: HeatMapPlugin.cpp  HeatMapPlugin.h  HeatMapPlugin.json  HeatMapWidget.cpp  HeatMapWidget.h
